[tool.poetry]
name = "wrathserver"
version = "0.1.0"
description = "A Flask server for facilitating the creation of characters for Wrathskeller."
authors = ["Frank Matranga <thefrankmatranga@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.19.2"
fastapi = "^0.75.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
